<resources>
    <string name="app_name">ToiletWall</string>


    <!-- drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_connection">Connection</string>
    <string name="nav_test">Test</string>
    <string name="nav_random">Random</string>
    <string name="nav_draw">Draw</string>
    <string name="nav_acc_game">Acc game</string>
    <string name="nav_sound">Sound</string>
    <string name="nav_text">Text</string>
    <string name="nav_animation">Animation</string>
    <string name="nav_settings">Settings</string>

    <string name="bt_discover_devices">Discover devices</string>
    <string name="bt_show_paired">Show paired</string>
</resources>
