<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connection"
            android:title="@string/nav_connection" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_test"
            android:title="@string/nav_test" />
        <item
            android:id="@+id/nav_random"
            android:title="@string/nav_random" />
        <item
            android:id="@+id/nav_draw"
            android:title="@string/nav_draw" />
        <item
            android:id="@+id/nav_acc_game"
            android:title="@string/nav_acc_game" />
        <item
            android:id="@+id/nav_sound"
            android:title="@string/nav_sound" />
        <item
            android:id="@+id/nav_text"
            android:title="@string/nav_text" />
        <item
            android:id="@+id/nav_animation"
            android:title="@string/nav_animation" />

    </group>

</menu>
